# plasma-ai-usage-monitor

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Justfile  README.md  ROADMAP.md  SECURITY.md  add_compact_modes.py  com.github.loofi.aiusagemonitor.metainfo.xml  fix_appinfo.py  fix_diag_qml.py  install.sh  plasma-ai-usage-monitor.spec  plasma_applet_com.github.loofi.aiusagemonitor.notifyrc  refactor_config.py  uninstall.sh
.copr/: Makefile
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: cmake-vcpkg.instructions.md
.github/prompts/: check-kde-dev-loop.prompt.md
.github/workflows/: ci.yml  config-drift.yml  release.yml
assets/screenshots/: README.md
conductor/: plan.md  ux-store-release-plan.md  v6_ui_redesign_plan.md
docs/: walkthrough.md
docs/demo/: fedora-kde-vm.md
docs/plans/: v6.0.0 ui redesign.md  v6.0.0.md
docs/release/: v6.0.1-checklist.md  v7.0.0-checklist.md
docs/store/: submission-checklist.md
docs/superpowers/plans/: 2026-03-29-ai-intelligence-engine.md  2026-03-29-aws-bedrock-provider.md  2026-03-29-jetbrains-monitor.md  2026-03-29-ollama-monitoring.md  2026-03-29-predictive-budgeting.md  2026-03-29-ui-overhaul-chrome-sync.md  2026-04-01-the-analyst.md
docs/superpowers/specs/: 2026-03-29-ai-intelligence-engine-design.md  2026-03-29-horizon-expansion-design.md  2026-03-29-ollama-monitoring-design.md  2026-03-29-ui-overhaul-chrome-sync-design.md  2026-04-01-the-analyst-design.md
docs/ways-of-work/plan/quality-engineering/cpp-unit-test-coverage-expansion/: implementation-plan.md
package/: metadata.json
package/contents/catalog/: providers-v2.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: ActivityHeatmap.qml  AnalystTab.qml  CompactRepresentation.qml  CostSummaryCard.qml  EfficiencyMetricCard.qml  FullRepresentation.qml  InsightBanner.qml  IntelligenceEngine.qml  IntelligenceTab.qml  MultiSeriesChart.qml  NotificationController.qml  OllamaCard.qml  OpenAICompatibleProviderSection.qml  ProviderCard.qml  ProviderCatalog.qml  ProviderRegistry.qml  RefreshScheduler.qml  RuntimeCoordinator.qml  SetupWizard.qml  SubscriptionToolCard.qml  TrendSummary.qml  UsageChart.qml  configAlerts.qml  configBudget.qml  configDiagnostics.qml  configGeneral.qml  configHistory.qml  configProviders.qml  configSubscriptions.qml  main.qml
plan/: feature-test-coverage-expansion-1.md
plugin/: CMakeLists.txt  aiusageplugin.cpp  anthropicprovider.cpp  appinfo.cpp  appinfo.h  awssigv4signer.cpp  awssigv4signer.h  azureopenaiprovider.cpp  azureopenaiprovider.h  bedrockprovider.cpp  bedrockprovider.h  browsercookieextractor.cpp  browsercookieextractor.h  claudecodemonitor.cpp  claudecodemonitor.h  codexclimonitor.cpp  codexclimonitor.h  copilotmonitor.cpp  copilotmonitor.h  cursormonitor.cpp  cursormonitor.h  forecastengine.cpp  forecastengine.h  googleprovider.cpp  googleveoprovider.cpp  groqprovider.cpp  intelligencebackend.cpp  intelligencebackend.h  jetbrainsaimonitor.cpp  jetbrainsaimonitor.h  jetbrainsmonitor.cpp  jetbrainsmonitor.h  localactivitymonitorbase.cpp  localactivitymonitorbase.h  localmetricsserver.cpp  localmetricsserver.h  loofiserverprovider.cpp  loofiserverprovider.h  ollamacloudprovider.cpp  ollamacloudprovider.h  (+16 more)
plugin/tests/: CMakeLists.txt  test_local_integrations.cpp  test_providerbackend.cpp  test_providers_mocked_http.cpp  test_subscription_tools.cpp  test_subscriptiontoolbackend.cpp  test_updatechecker.cpp  test_usagedatabase_analyst.cpp
scripts/: build_srpm.sh  bump_version.sh  check_package_payload.py  check_provider_catalog.py  check_qml_registered_types.py  clean_local_installs.sh  copr_submit_build.sh  dev_smoke_check.sh  fedora44_check.sh  generate_store_screenshots.py  install_bootstrap.sh  install_doctor.sh  install_local_plasmoid.sh  package_plasmoid.sh  package_source_tarball.sh  reload_plasma.sh  show_installed_versions.sh  smoke_test_qml_import.py
scripts/demo/: bootstrap_demo_env.ps1  bootstrap_demo_env.sh  mock_ai_usage_server.py  mock_server.py  requirements.txt  setup_fedora_kde_test_env.sh  showcase_preset.json
